updated with new paper to come, talks and Fulbright

--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -62,7 +62,7 @@ Python, Unix, LaTeX, Git(Hub)
 
 \begin{entrylist}
 \entry
-{2018 \to \textbf{05/2022}}
+{2018 \to \textbf{07/2022}}
 {PhD {\normalfont in Astrophysics}}
 {Leibniz Institute for Astrophysics Potsdam (AIP), Germany}
 {Supervisor: Prof. Dr. Katja Poppenh\"ager\\
@@ -101,10 +101,17 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 \section{refereed publications}
 %\reversemarginpar
 %\marginnote{\color{gray}{refereed}}
+\bibentry{Giant white-light flares on fully convective stars occur at high latitudes}{Ilin, Ekaterina; Poppenhäger, Katja; Schmidt, Sarah J.; J\"arvinen, Silva P.; Newton, Elisabeth R.; Alvarado-G\'omez, Julian D; Pineda, Sebastian J.; Davenport, James R. A.; Oshagh, Mahmoudreza; Ilyin, Ilya}{2021, Monthly Notices of the Royal Astronomical Society, XXXXXXX\\\texttt{\href{DOILINK}{DOI} \href{ArXivlink}{arXiv:XXXX.XXXXX}}}
+
+
+
+\bibentry{AltaiPony -- Flare science in Kepler, K2 and TESS light curves}{Ilin, Ekaterina}{2021, Journal of Open Source Software, 6(62), 2845\\\texttt{\href{https://doi.org/10.21105/joss.02845}{10.21105/joss.02845}}}
+
+\bibentry{Flares in Open Clusters with K2. II. Pleiades, Hyades, Praesepe, Ruprecht 147, and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Poppenhäger, Katja; Davenport, James R. A.; Kristiansen, Martti H.; Omohundro, Mark}{2021, Astronomy \& Astrophysics, 645,i d.A42, 25 pp.\\\texttt{\href{https://doi.org/10.1051/0004-6361/202039198}{doi:10.1051/0004-6361/202039198} \href{https://arxiv.org/abs/2010.05576}{arXiv:2010.05576}}}
+
 \bibentry{Flares in Open Clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{2019, Astronomy \& Astrophysics, 622, A133/16.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400
 } \href{https://arxiv.org/abs/1812.06725}{arXiv:1812.06725}}}
 
-\bibentry{Flares in Open Clusters with K2. II. Pleiades, Hyades, Praesepe, Ruprecht 147, and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Poppenhäger, Katja; Davenport, James R. A.; Kristiansen, Martti H.; Omohundro, Mark}{2020, Astronomy \& Astrophysics, forthcoming.\\\texttt{ \href{https://arxiv.org/abs/2010.05576}{arXiv:2010.05576}}}
 
 \section{telescope time}
 
@@ -113,7 +120,7 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 {2020 }
 {SALT HRS, 2.8 hours DDT}
 {}
-{PI: Katja Poppenh\"ager}
+{PI: Katja Poppenh\"ager, Co-Is: Ekaterina Ilin, Sarah J. Schmidt}
 
 
 \end{entrylist}
@@ -153,28 +160,49 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 
 
 
-\section{presentations}
+\section{academic presentations and posters}
 
 \begin{entrylist}
 %------------------------------------------------
 \entry
+{2021}
+{Contributed talk}
+{European Astronomical Society Meeting 2021\vspace{-.1cm}\\\null\hfill
+virtual}
+{The coolest stars may not hit their planets with their flaring all that much}
+%------------------------------------------------
+\entry
+{2021}
+{Contributed talk}
+{XMM-Newton Science Workshop: A high-energy view of exoplanets and their environments\vspace{-.1cm}\\\null\hfill
+virtual}
+{Giant white-light flares on fully convective stars occur at high latitudes}
+%------------------------------------------------
+\entry
+{2021}
+{Virtual Poster}
+{Cambridge Workshops of Cool Stars, Stellar Systems and the Sun \vspace{-.1cm}\\\null\hfill  CoolStars 20.5\vspace{-.1cm}\\\null\hfill
+virtual, global}
+{\href{https://zenodo.org/record/4558792}{Giant white-light flares on fully convective stars occur at high latitudes}}
+%------------------------------------------------
+\entry
 {2020}
-{Conference talk}
+{Contributed talk}
 {Annual Meeting of the German Astronomical Society\vspace{-.1cm}\\\null\hfill
 virtual, Germany}
 {Flares, mass, age, AND rotation.\\Calibrating the flaring-age-mass relation in open clusters.}
 %------------------------------------------------
-\entry
-{2020}
-{Poster exhibition}
-{Royal Astronomical Society\vspace{-.1cm}\\\null\hfill
-Early Career Poster Exhibition\vspace{-.1cm}\\\null\hfill
-virtual, global}
-{Where do giant flares occur on small stars?}
+%\entry
+%{2020}
+%{Poster exhibition}
+%{Royal Astronomical Society\vspace{-.1cm}\\\null\hfill
+%Early Career Poster Exhibition\vspace{-.1cm}\\\null\hfill
+%virtual, global}
+%{Where do giant flares occur on small stars?}
 %------------------------------------------------
 \entry
 {2019}
-{Conference talk}
+{Contributed talk}
 {16th Potsdam Thinkshop: \vspace{-.1cm}\\\null\hfill
 The rotation periods of cool stars:\vspace{-.1cm}\\\null\hfill Measurements, uses, connections and prospects \vspace{-.1cm}\\\null\hfill
 Potsdam, Germany}
@@ -188,15 +216,15 @@ Potsdam, Germany}
 %------------------------------------------------
 \entry
 {2019}
-{Conference talk}
+{Contributed talk}
 {Planet-Star Connections in the Era of TESS and Gaia\vspace{-.1cm}\\\null\hfill Santa Barbara, CA, USA}
 {Stellar magnetic evolution: flaring activity in K2 open clusters}
 %------------------------------------------------
-%\entry
-%{2019}
-%{Seminar talk}
-%{Centre for Star and Planet Formation (STARPLAN)\vspace{-.1cm}\\\null\hfill Copenhagen, Denmark}
-%{Stellar magnetic evolution: superflares}
+\entry
+{2019}
+{Seminar talk}
+{Centre for Star and Planet Formation (STARPLAN)\vspace{-.1cm}\\\null\hfill Copenhagen, Denmark}
+{Stellar magnetic evolution: superflares}
 %%------------------------------------------------
 \entry
 {2018}
@@ -206,7 +234,7 @@ Potsdam, Germany}
 %------------------------------------------------
 \entry
 {2018}
-{Workshop talk}
+{Contributed talk}
 {Dwarf Stars and Clusters with K2\vspace{-.1cm}\\\null\hfill Boston, MA, USA}
 {In search of the flaring-age relation.}
 %------------------------------------------------
@@ -220,10 +248,18 @@ Potsdam, Germany}
 %\clearpage
 %\smallheader{Ekaterina}{Ilin}
 
+\newpage
+
 \section{awards and scholarships}
 
 \begin{entrylist}
 %------------------------------------------------
+\entry
+{2021 \to ongoing}
+{Fulbright Scholarship for Doctoral Students}
+{The German-American Fulbright Commission }
+{Includes a stipend, travel grant, and academic support throughout a 6-month research stay in the USA.}
+
 \entry
 {2020 \to ongoing}
 {Doctoral Scholarship}
@@ -272,27 +308,31 @@ Focus: Space Physics, Computational Physics}
 %\clearpage
 %\smallheader{Ekaterina}{Ilin}
 
-%\section{volunteering}
-%\begin{entrylist}
+\section{outreach and civic involvement}
+\begin{entrylist}
 %\entry
 %{2017 \to ongoing}
 %{Python in astronomy}
 %{University of Potsdam\vspace{-.1cm}\\\null\hfill Leibniz Institute for Astrophysics Potsdam - AIP}
 %{Running a Python code review group with the master students in astrophysics on a biweekly basis in 2017/2018. Running the Python Club at AIP since 2019.\\}
 %%------------------------------------------------
-%\entry
-%{2016 \to ongoing}
-%{Effective Altruism}
-%{Effective Altruism Berlin, Potsdam\vspace{-.1cm}
-%\\\null\hfill Studienstiftung d. dt. Volkes
-%\vspace{-.1cm}\\\null\hfill Netzwerk f\"ur Effektiven Altruismus Deutschland e.V.}
-%{Organising interdisciplinary workshops for 20-120 participants, reading groups, and recreational activities; local group head in Potsdam. Currently member of the excutive board of the German Network for Effective Altruism (NEAD e.V.).\\}
+\entry
+{2021}
+{Public talk on YouTube}
+{Sterne, Weltall und das Leben}
+{\texttt{\href{https://www.youtube.com/watch?v=LLHLobUifeY}{30-min YouTube video}} about electromagnetic star-planet interactions on the popular German astronomy channel "Sterne, Weltall und das Leben", $>$ 20k views.}
 %%------------------------------------------------
-%\entry
-%{2013 \to ongoing}
-%{Junior scientists network}
-%{Deutsches Jungforschernetzwerk - juFORUM e.V.}
-%{Organising interdisciplinary workshops and symposia for students and young researchers in STEM, presenting at science fairs, publishing articles in the club magazine; member of the executive board.}
+\entry
+{2019 \to 2021}
+{Effective Altruism}
+{Netzwerk f\"ur Effektiven Altruismus Deutschland e. V.}
+{Co-founder and current chair of the board at the German Effective Altruism Network (NEAD e. V.). Coordinating the German-speaking Effective Altruist community: Community building, strategy, volunteer management.\\}
 %%------------------------------------------------
-%\end{entrylist}
+\entry
+{2013 \to 2019}
+{Junior scientists network}
+{Deutsches Jungforschernetzwerk - juFORUM e.V.}
+{Organising interdisciplinary workshops and symposia for students and young researchers in STEM, presenting at science fairs, publishing articles in the club magazine; member of the executive board.}
+%%------------------------------------------------
+\end{entrylist}
 \end{document}
