--- a/k-cv.cls
+++ b/k-cv.cls
@@ -118,6 +118,7 @@ minimum height=2cm, yshift=0.5mm] (box) at (current page.north){};
         orange\or%
         green\or%
         purple\or%
+        orange\or%
         blue\else%
         headercolor\fi%
     } #1#2#3%
@@ -202,7 +203,7 @@ minimum height=2cm, yshift=0.5mm] (box) at (current page.north){};
 % Other tweaks %
 %%%%%%%%%%%%%%%%
 
-\RequirePackage[left=6.1cm,top=2cm,right=1.5cm,bottom=2.5cm,nohead,nofoot]{geometry}
+\RequirePackage[left=6.1cm,top=2cm,right=1.5cm,bottom=1.5cm,nohead,nofoot]{geometry}
 \RequirePackage[hidelinks]{hyperref}
 \hypersetup{
     colorlinks=false}
