updated with supervision and ISC

--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -31,10 +31,11 @@
 %-------------------------------------------------------------------------------
 %	SIDEBAR SECTION
 %-------------------------------------------------------------------------------
-
-\begin{aside} % In the aside, each new line forces a line break
-\section{date of birth}
-\color{gray}1992-09-11
+% In the aside, each new line forces a line break
+%\section{date of birth}
+%1992-09-11
+\begin{aside} 
+\color{gray}
 \section{contact}
 Carl-D\"ahne-Str. 10
 14469 Potsdam
@@ -48,7 +49,7 @@ Germany
 %\href{http://facebook.com/johnsmith}{fb://jsmith}
 \section{languages}
 Russian, German (bilingual)
-English C1
+English C2
 French B2
 \section{skills}
 Python, Unix, LaTeX, Git(Hub)
@@ -64,20 +65,20 @@ Python, Unix, LaTeX, Git(Hub)
 \entry
 {2018 \to \textbf{07/2022}}
 {PhD {\normalfont in Astrophysics}}
-{Leibniz Institute for Astrophysics Potsdam (AIP), Germany}
+{\\Leibniz Institute for Astrophysics Potsdam (AIP), Germany}
 {Supervisor: Prof. Dr. Katja Poppenh\"ager\\
-\emph{Stellar Flares in Star-Exoplanet Systems and Young Stars} \vspace{0.2cm}\\ I am interested in magnetic star-planet interactions, and their long-term effects on exoplanet habitability and stellar evolution.}
+\emph{Stellar Flares in Star-Exoplanet Systems and Young Stars} \vspace{0.2cm}\\ \textit{\textbf{I am interested in everything magnetic about stellar activity, star-planet interactions, effects on exoplanet habitability, and stellar evolution in the smallest stars.}}}
 %------------------------------------------------
 %------------------------------------------------
 \entry
 {2016 \to 2018}
 {Master {\normalfont of Science in Astrophysics}}
-{University of Potsdam, Germany}
+{\\University of Potsdam, Germany}
 {Supervisor: Prof. Dr. Klaus Strassmeier \\
  Mentor: Dr. Sarah J. Schmidt\\
 \emph{Flares in Clusters using K2 Data} \\ 
-\emph{1,0 "with distinction"}\vspace{0.2cm}\\
-This thesis quantified the relation between flaring activity on cool stars and their masses and ages for ZAMS to 600 Myr and K to mid-M dwarfs.}
+\emph{1,0 "with distinction"}\vspace{0.2cm}}%\\
+%This thesis quantified the relation between flaring activity on cool stars and their masses and ages for ZAMS to 600 Myr and K to mid-M dwarfs.}
 %------------------------------------------------
 
 
@@ -85,7 +86,7 @@ This thesis quantified the relation between flaring activity on cool stars and t
 \entry
 {2012 \to 2016}
 {Bachelor {\normalfont of Science in Physics}}
-{Karlsruhe Institute for Technology, Germany}
+{\\Karlsruhe Institute for Technology, Germany}
 {Specialization in Biophysics\\
 Supervisor: Prof. Dr. Ulrich Nienhaus\\
 \emph{Uptake of TAT-coated Gold Nanoclusters in Live HeLa-Cells}\\
@@ -101,17 +102,16 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 \section{refereed publications}
 %\reversemarginpar
 %\marginnote{\color{gray}{refereed}}
-\bibentry{Giant white-light flares on fully convective stars occur at high latitudes}{Ilin, Ekaterina; Poppenhäger, Katja; Schmidt, Sarah J.; J\"arvinen, Silva P.; Newton, Elisabeth R.; Alvarado-G\'omez, Julian D; Pineda, Sebastian J.; Davenport, James R. A.; Oshagh, Mahmoudreza; Ilyin, Ilya}{2021, Monthly Notices of the Royal Astronomical Society, XXXXXXX\\\texttt{\href{DOILINK}{DOI} \href{ArXivlink}{arXiv:XXXX.XXXXX}}}
+\bibentry{Giant white-light flares on fully convective stars occur at high latitudes}{Ilin, E.; Poppenhäger, K.; Schmidt, S. J.; J\"arvinen, S. P.; Newton, E. R.; Alvarado-G\'omez, J. D; Pineda, S. J.; Davenport, J. R. A.; Oshagh, M.; Ilyin, I.}{2021, Monthly Notices of the Royal Astronomical Society, 507/2, pp 1723–1745\\\texttt{\href{https://doi.org/10.1093/mnras/stab2159}{doi:10.1093/mnras/stab2159} \href{https://arxiv.org/abs/2108.01917}{arXiv:2108.01917}}}
 
 
+\bibentry{AltaiPony -- Flare science in Kepler, K2 and TESS light curves}{Ilin, E.}{2021, Journal of Open Source Software, 6(62), 2845\\\texttt{\href{https://doi.org/10.21105/joss.02845}{10.21105/joss.02845}}}
 
-\bibentry{AltaiPony -- Flare science in Kepler, K2 and TESS light curves}{Ilin, Ekaterina}{2021, Journal of Open Source Software, 6(62), 2845\\\texttt{\href{https://doi.org/10.21105/joss.02845}{10.21105/joss.02845}}}
+\bibentry{Flares in Open Clusters with K2. II. Pleiades, Hyades, Praesepe, Ruprecht 147, and M67}{Ilin, E.; Schmidt, S. J.; Poppenhäger, K.; Davenport, J. R. A.; Kristiansen, M. H.; Omohundro, M.}{2021, Astronomy \& Astrophysics, 645,i d.A42, 25 pp.\\\texttt{\href{https://doi.org/10.1051/0004-6361/202039198}{doi:10.1051/0004-6361/202039198} \href{https://arxiv.org/abs/2010.05576}{arXiv:2010.05576}}}
 
-\bibentry{Flares in Open Clusters with K2. II. Pleiades, Hyades, Praesepe, Ruprecht 147, and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Poppenhäger, Katja; Davenport, James R. A.; Kristiansen, Martti H.; Omohundro, Mark}{2021, Astronomy \& Astrophysics, 645,i d.A42, 25 pp.\\\texttt{\href{https://doi.org/10.1051/0004-6361/202039198}{doi:10.1051/0004-6361/202039198} \href{https://arxiv.org/abs/2010.05576}{arXiv:2010.05576}}}
-
-\bibentry{Flares in Open Clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{2019, Astronomy \& Astrophysics, 622, A133/16.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400
+\bibentry{Flares in Open Clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, S. J.; Davenport, J. R. A.; Strassmeier, K. G.}{2019, Astronomy \& Astrophysics, 622, A133/16.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400
 } \href{https://arxiv.org/abs/1812.06725}{arXiv:1812.06725}}}
-
+\newpage
 
 \section{telescope time}
 
@@ -125,29 +125,36 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 
 \end{entrylist}
 
-\newpage
 
-\section{work and teaching}
+
+\section{teaching and supervision}
 
 \begin{entrylist}
 
+
+%------------------------------------------------
+\entry
+{2020 \to ongoing}
+{University of Heidelberg}
+{}
+{Mentoring Aaron Maas, a graduate student, during his first peer-reviewed research project on TRAPPIST-1 flares with MUSCAT.}
 %------------------------------------------------
 \entry
 {2020}
 {University of Potsdam}
-{Potsdam, Germany}
+{}
 {\emph{Teaching assistant} for undergraduates.}
 %------------------------------------------------
 \entry
 {2018}
 {Leibniz Institute for Astrophysics (AIP)}
-{Potsdam, Germany}
+{}
 {\emph{Research Assistant}}
 %------------------------------------------------
 \entry
 {2016 \to 2018}
 {University of Potsdam}
-{Potsdam, Germany}
+{}
 {\emph{Teaching assistant} for undergraduates.}
 %------------------------------------------------
 %\entry
@@ -166,30 +173,27 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 %------------------------------------------------
 \entry
 {2021}
-{Contributed talk}
-{European Astronomical Society Meeting 2021\vspace{-.1cm}\\\null\hfill
-virtual}
+{Contributed talk @ European Astronomical Society Meeting}
+{\\ virtual}
 {The coolest stars may not hit their planets with their flaring all that much}
 %------------------------------------------------
 \entry
 {2021}
-{Contributed talk}
-{XMM-Newton Science Workshop: A high-energy view of exoplanets and their environments\vspace{-.1cm}\\\null\hfill
-virtual}
+{Contributed talk @ XMM-Newton Science Workshop}
+{\\ virtual}
 {Giant white-light flares on fully convective stars occur at high latitudes}
 %------------------------------------------------
-\entry
-{2021}
-{Virtual Poster}
-{Cambridge Workshops of Cool Stars, Stellar Systems and the Sun \vspace{-.1cm}\\\null\hfill  CoolStars 20.5\vspace{-.1cm}\\\null\hfill
-virtual, global}
-{\href{https://zenodo.org/record/4558792}{Giant white-light flares on fully convective stars occur at high latitudes}}
+%\entry
+%{2021}
+%{Virtual Poster @ CoolStars20.5}
+%{Cambridge Workshops of Cool Stars, Stellar Systems and the Sun \vspace{-.1cm}\\\null\hfill  CoolStars 20.5\vspace{-.1cm}\\\null\hfill
+%virtual, global}
+%{\href{https://zenodo.org/record/4558792}{Giant white-light flares on fully convective stars occur at high latitudes}}
 %------------------------------------------------
 \entry
 {2020}
-{Contributed talk}
-{Annual Meeting of the German Astronomical Society\vspace{-.1cm}\\\null\hfill
-virtual, Germany}
+{Contributed talk @ Annual Meeting of the German Astronomical Society}
+{\\ virtual}
 {Flares, mass, age, AND rotation.\\Calibrating the flaring-age-mass relation in open clusters.}
 %------------------------------------------------
 %\entry
@@ -202,10 +206,8 @@ virtual, Germany}
 %------------------------------------------------
 \entry
 {2019}
-{Contributed talk}
-{16th Potsdam Thinkshop: \vspace{-.1cm}\\\null\hfill
-The rotation periods of cool stars:\vspace{-.1cm}\\\null\hfill Measurements, uses, connections and prospects \vspace{-.1cm}\\\null\hfill
-Potsdam, Germany}
+{Contributed talk @ \href{https://thinkshop.aip.de/16/cms/} {16th Potsdam Thinkshop}}
+{\\AIP, Potsdam, Germany}
 {At a gallop: stellar flares from Kepler/K2 and TESS}
 %------------------------------------------------
 %\entry
@@ -216,26 +218,26 @@ Potsdam, Germany}
 %------------------------------------------------
 \entry
 {2019}
-{Contributed talk}
-{Planet-Star Connections in the Era of TESS and Gaia\vspace{-.1cm}\\\null\hfill Santa Barbara, CA, USA}
+{Contributed talk @ \href{https://www.kitp.ucsb.edu/activities/exostar-c19}{Planet-Star Connections in the Era of TESS and Gaia}}
+{\\Santa Barbara, CA, USA}
 {Stellar magnetic evolution: flaring activity in K2 open clusters}
 %------------------------------------------------
 \entry
 {2019}
-{Seminar talk}
-{Centre for Star and Planet Formation (STARPLAN)\vspace{-.1cm}\\\null\hfill Copenhagen, Denmark}
+{Seminar talk @ Centre for Star and Planet Formation (STARPLAN)}
+{\\ Copenhagen, Denmark}
 {Stellar magnetic evolution: superflares}
 %%------------------------------------------------
 \entry
 {2018}
-{Conference poster}
-{CoolStars20\vspace{-.1cm}\\\null\hfill Boston, MA, USA}
+{Conference poster @ \href{http://coolstars20.cfa.harvard.edu/}{CoolStars20}}
+{\\ Boston, MA, USA}
 {Exploring flaring activity as an age indicator using open cluster data}
 %------------------------------------------------
 \entry
 {2018}
-{Contributed talk}
-{Dwarf Stars and Clusters with K2\vspace{-.1cm}\\\null\hfill Boston, MA, USA}
+{Contributed talk @ \href{https://keplergo.github.io/KeplerScienceWebsite/workshop-on-dwarf-stars-and-clusters-with-k2-registration-now-open-space-is-limited.html}{Dwarf Stars and Clusters with K2}}
+{\\Boston, MA, USA}
 {In search of the flaring-age relation.}
 %------------------------------------------------
 \end{entrylist}
@@ -250,33 +252,33 @@ Potsdam, Germany}
 
 \newpage
 
-\section{awards and scholarships}
+\section{awards, scholarships, funding}
 
 \begin{entrylist}
 %------------------------------------------------
 \entry
 {2021 \to ongoing}
-{Fulbright Scholarship for Doctoral Students}
-{The German-American Fulbright Commission }
-{Includes a stipend, travel grant, and academic support throughout a 6-month research stay in the USA.}
+{Fulbright Scholarship @ American Museum of Natural History}
+{ }
+{Awarded to doctoral students by the German-American Fulbright Commission.  Includes a stipend, travel grant, and academic support throughout a  six month research stay in the USA.}
 
 \entry
 {2020 \to ongoing}
-{Doctoral Scholarship}
-{German Academic Scholarship Foundation}
+{Doctoral Scholarship @ German Academic Scholarship Foundation}
+{}
 {Includes a stipend, travel grants, and academic support throughout the doctoral studies.}
 
 \entry
 {2019}
-{Graduation Award}
-{Physikalische Gesellschaft zu Berlin, Berlin, Germany}
+{Graduation Award @ Physikalische Gesellschaft zu Berlin, Berlin, Germany}
+{}
 {Award for excellent master theses in physics earned at universities in Berlin and Potsdam.}
 
 
 \entry
 {2018}
-{Visiting Scientist}
-{NASA Ames Research Center, Mountain View, CA, USA}
+{Visiting Scientist @ NASA Ames Research Center, Mountain View, CA, USA}
+{}
 {Awarded funding for a research visit at the Kepler mission headquarters.}
 
 %\entry
@@ -287,22 +289,19 @@ Potsdam, Germany}
 
 \entry
 {2014}
-{Erasmus+ Scholarship}
-{Universitet i Oslo, Norway}
-{Awarded funding for six month of undergraduate studies.\\
+{Erasmus+ Scholarship @ Universitet i Oslo, Norway}
+{}
+{Awarded funding for six months of undergraduate studies.\\
 Focus: Space Physics, Computational Physics}
 
 \entry
 {2012 \to 2018}
-{Full Scholarship}
-{German Academic Scholarship Foundation}
+{Full Scholarship @ German Academic Scholarship Foundation}
+{}
 {Includes a stipend, travel grants, and academic support throughout the undergraduate and graduate studies.}
 
 %------------------------------------------------
 \end{entrylist}
-
-
-
 
 
 %\clearpage
@@ -317,22 +316,35 @@ Focus: Space Physics, Computational Physics}
 %{Running a Python code review group with the master students in astrophysics on a biweekly basis in 2017/2018. Running the Python Club at AIP since 2019.\\}
 %%------------------------------------------------
 \entry
+{2021 \to ongoing}
+{Student representative in the Internal Scientific Committee}
+{}
+{Duties include: \textbf{representing (under)graduate and PhD students} affiliated with the AIP; running social events for the institute staff; on-boarding of new students to AIP}
+
+\entry
 {2021}
-{Public talk on YouTube}
-{Sterne, Weltall und das Leben}
-{\texttt{\href{https://www.youtube.com/watch?v=LLHLobUifeY}{30-min YouTube video}} about electromagnetic star-planet interactions on the popular German astronomy channel "Sterne, Weltall und das Leben", $>$ 20k views.}
+{Public talk on YouTube: "Sterne, Weltall und das Leben"}
+{}
+{\texttt{\href{https://www.youtube.com/watch?v=LLHLobUifeY}{30-min YouTube video}} about electromagnetic star-planet interactions on the \textbf{popular German astronomy channel} "Sterne, Weltall und das Leben", $>$ 21k views.}
+
+\entry
+{2019}
+{Interview with the Women in Research Blog}
+{}
+{\texttt{\href{https://womeninresearchblog.wordpress.com/2019/06/26/ekaterina-germany/}{Blog post}} about my understanding of scientific research and opinions on how to support \textbf{women in STEM}.}
+
 %%------------------------------------------------
 \entry
 {2019 \to 2021}
-{Effective Altruism}
-{Netzwerk f\"ur Effektiven Altruismus Deutschland e. V.}
-{Co-founder and current chair of the board at the German Effective Altruism Network (NEAD e. V.). Coordinating the German-speaking Effective Altruist community: Community building, strategy, volunteer management.\\}
+{Community leader at NEAD e. V.}
+{}
+{Co-founder and former chair of the board at the German Effective Altruism Network (NEAD e. V.). Coordinated the German-speaking \href{https://www.effectivealtruism.com/}{\textbf{Effective Altruism}} community: Community building, strategy, volunteer management. \\}
 %%------------------------------------------------
 \entry
 {2013 \to 2019}
-{Junior scientists network}
-{Deutsches Jungforschernetzwerk - juFORUM e.V.}
-{Organising interdisciplinary workshops and symposia for students and young researchers in STEM, presenting at science fairs, publishing articles in the club magazine; member of the executive board.}
+{Community leader at Deutsches Jungforschernetzwerk - juFORUM e.V.}
+{}
+{Organising interdisciplinary workshops and symposia for students and \textbf{young researchers in STEM}, presenting at science fairs, publishing articles in the \href{https://www.juforum.de/}{association}'s magazine; member of the executive board.}
 %%------------------------------------------------
 \end{entrylist}
 \end{document}
